# rust_architecture_4

./: Cargo.toml  readme.md  report.txt
src/: error.rs  main.rs
src/controller/: error.rs  estimate_controller.rs  mod.rs  section_controller.rs
src/dto/: estimate_dto.rs  mod.rs  section_dto.rs
src/entity/: error.rs  estimate.rs  mod.rs  section.rs  traits.rs
src/presenter/: error.rs  estimate_presenter.rs  mod.rs
src/repository/: error.rs  mod.rs  repository.rs
src/repository/in_memory_repo/: error.rs  mod.rs
src/service/: error.rs  estimate_service.rs  generic_service.rs  mod.rs  section_service.rs
src/use_case/: create_estimate.rs  create_section_add_to_estimate.rs  error.rs  mod.rs  set_estimate_location.rs
