[package]
name = "rust_architecture_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.



[dependencies]
chrono = "0.4.33"

derive_more = {version = "1.0.0-beta", features = ["from", "display"] }

uuid = {version = "1", features = ["v4","fast-rng",]}


serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"] }
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
mockall = "0.12.1"
tokio = {version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
